data/derived/comb/progs/unify/prog1346.ml.out
Characters 466-467:
  (eval(e1,x,y) ** 2) + (eval(e2,x,y) ** 2) + (eval(e3,x,y) ** 2);;
                   ^
Error: This expression has type int but an expression was expected of type
         float
